--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#335478</color>
+    <color name="colorPrimaryDark">#273747</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorWhite">#f8f8f8</color>
+    <color name="colorLight">#8c98a6</color>
 </resources>
