--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="tab_padding_side">12dp</dimen>
+    <dimen name="tab_padding">20dp</dimen>
+    <dimen name="tab_min_w">72dp</dimen>
 </resources>
