--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,8 @@
     android:paddingLeft="0dp"
     android:paddingRight="0dp"
     android:paddingTop="0dp"
-    tools:context="sk.lgstudio.easyflightbag.MainActivity">
+    tools:context="sk.lgstudio.easyflightbag.MainActivity"
+    android:background="?attr/backgroundColor">
 
     <include
         layout="@layout/menu_tab"
@@ -18,7 +19,8 @@
 
         />
 
-    <sk.lgstudio.easyflightbag.fragments.CustomViewPager
+    <sk.lgstudio.easyflightbag.ui.CustomViewPager
+        android:id="@+id/view_fragment_pager"
         android:layout_below="@id/menu_tab"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
