--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,29 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+    <!-- Base application theme. LIGHT -->
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+
+        <item name="primaryColor">@color/colorPrimary</item>
+        <item name="primaryColorDark">@color/colorPrimaryDark</item>
+        <item name="primaryTextColor">@color/colorBlack</item>
+        <item name="secondaryTextColor">@color/colorDark</item>
+        <item name="dividerColor">@color/colorLight</item>
+        <item name="highlightColor">@color/colorWhite</item>
+        <item name="backgroundColor">@color/colorWhite</item>
+        <item name="backgroundDarkColor">@color/colorLighter</item>
+    </style>
+
+    <!-- Base application theme. DARK -->
+    <style name="AppThemeDark" parent="Theme.AppCompat.Light.NoActionBar">
+
+        <item name="primaryColor">@color/colorPrimaryDark</item>
+        <item name="primaryColorDark">@color/colorPrimaryDarker</item>
+        <item name="primaryTextColor">@color/colorLighter</item>
+        <item name="secondaryTextColor">@color/colorLight</item>
+        <item name="dividerColor">@color/colorGray</item>
+        <item name="highlightColor">@color/colorLight</item>
+        <item name="backgroundColor">@color/colorDarker</item>
+        <item name="backgroundDarkColor">@color/colorDark</item>
     </style>
 
 </resources>
