--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="0dp"
@@ -9,21 +10,33 @@
     android:paddingRight="0dp"
     android:paddingTop="0dp"
     tools:context="sk.lgstudio.easyflightbag.MainActivity"
-    android:background="?attr/backgroundColor">
+    >
 
-    <include
-        layout="@layout/menu_tab"
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/menu_tab"
-        android:layout_width="fill_parent"
-        android:layout_height="48dp"
+        android:elevation="@dimen/elevation_8">
 
-        />
+        <include
+            layout="@layout/menu_tab"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            />
+
+    </FrameLayout>
+
+
 
     <sk.lgstudio.easyflightbag.ui.CustomViewPager
         android:id="@+id/view_fragment_pager"
         android:layout_below="@id/menu_tab"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+
         />
+
+
+
 
 </RelativeLayout>
