--- a/app/src/main/res/layout/chk_list_file_header.xml
+++ b/app/src/main/res/layout/chk_list_file_header.xml
@@ -15,7 +15,7 @@
         android:layout_gravity="right"
         android:clickable="true"
         android:textAllCaps="true"
-        android:textColor="?attr/secondaryTextColor"
+        android:textColor="?attr/backgroundDarkColor"
         android:textStyle="bold"/>
 
 </LinearLayout>
