--- a/app/src/main/res/layout/menu_tab.xml
+++ b/app/src/main/res/layout/menu_tab.xml
@@ -4,6 +4,7 @@
                       android:layout_height="wrap_content"
                       android:background="?attr/primaryColor"
                       android:fillViewport="false"
+                      android:elevation="@dimen/elevation_12"
     >
 
     <LinearLayout
@@ -33,7 +34,7 @@
             android:layout_height="match_parent"
             android:src="@drawable/ic_library"
             android:contentDescription="@string/tab_aip"
-            android:background="@drawable/bck_tab_default"
+            android:background="@drawable/bck_transparent"
             android:paddingLeft="@dimen/tab_padding_side"
             android:paddingRight="@dimen/tab_padding_side"
             android:paddingTop="@dimen/tab_padding"
@@ -48,7 +49,7 @@
             android:layout_height="match_parent"
             android:src="@drawable/ic_cloud"
             android:contentDescription="@string/tab_weather"
-            android:background="@drawable/bck_tab_default"
+            android:background="@drawable/bck_transparent"
             android:paddingLeft="@dimen/tab_padding_side"
             android:paddingRight="@dimen/tab_padding_side"
             android:paddingTop="@dimen/tab_padding"
@@ -63,7 +64,7 @@
             android:layout_height="match_parent"
             android:src="@drawable/ic_check"
             android:contentDescription="@string/tab_chklist"
-            android:background="@drawable/bck_tab_default"
+            android:background="@drawable/bck_transparent"
             android:paddingLeft="@dimen/tab_padding_side"
             android:paddingRight="@dimen/tab_padding_side"
             android:paddingTop="@dimen/tab_padding"
@@ -78,7 +79,7 @@
             android:layout_height="match_parent"
             android:src="@drawable/ic_docs"
             android:contentDescription="@string/tab_docs"
-            android:background="@drawable/bck_tab_default"
+            android:background="@drawable/bck_transparent"
             android:paddingLeft="@dimen/tab_padding_side"
             android:paddingRight="@dimen/tab_padding_side"
             android:paddingTop="@dimen/tab_padding"
@@ -93,7 +94,7 @@
             android:layout_height="match_parent"
             android:src="@drawable/ic_plan"
             android:contentDescription="@string/tab_plan"
-            android:background="@drawable/bck_tab_default"
+            android:background="@drawable/bck_transparent"
             android:paddingLeft="@dimen/tab_padding_side"
             android:paddingRight="@dimen/tab_padding_side"
             android:paddingTop="@dimen/tab_padding"
@@ -108,7 +109,7 @@
             android:layout_height="match_parent"
             android:src="@drawable/ic_functions"
             android:contentDescription="@string/tab_functions"
-            android:background="@drawable/bck_tab_default"
+            android:background="@drawable/bck_transparent"
             android:paddingLeft="@dimen/tab_padding_side"
             android:paddingRight="@dimen/tab_padding_side"
             android:paddingTop="@dimen/tab_padding"
@@ -123,7 +124,7 @@
             android:layout_height="match_parent"
             android:src="@drawable/ic_settings"
             android:contentDescription="@string/tab_settings"
-            android:background="@drawable/bck_tab_default"
+            android:background="@drawable/bck_transparent"
             android:paddingLeft="@dimen/tab_padding_side"
             android:paddingRight="@dimen/tab_padding_side"
             android:paddingTop="@dimen/tab_padding"
