--- a/app/src/main/res/values-w820dp/dimens.xml
+++ b/app/src/main/res/values-w820dp/dimens.xml
@@ -13,4 +13,6 @@
     <dimen name="elevation_4">4dp</dimen>
     <dimen name="row_heigth">48dp</dimen>
     <dimen name="row_padding">16dp</dimen>
+    <dimen name="elevation_16">16dp</dimen>
+    <dimen name="elevation_12">12dp</dimen>
 </resources>
