--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#335478</color>
+    <color name="colorPrimaryLight">#4b7cb1</color>
+    <color name="colorPrimaryLighter">#5f9cde</color>
     <color name="colorPrimaryDark">#273747</color>
     <color name="colorPrimaryDarker">#131c24</color>
     <color name="colorAccent">#49b94b</color>
@@ -17,4 +19,7 @@
 
     <color name="colorGreen">#49b94b</color>
     <color name="colorGreenDark">#287a29</color>
+
+    <color name="colorBlueLight">#8fb0d4</color>
+    <color name="colorBlue">#5091d9</color>
 </resources>
