Ckecklists working - TODO: New Checklist

--- a/app/src/main/res/layout/chk_list_content_actual.xml
+++ b/app/src/main/res/layout/chk_list_content_actual.xml
@@ -11,6 +11,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/chklist_item_text"
         android:text="detail"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="?attr/primaryTextColor"/>
+
 
 </LinearLayout>
