--- a/app/src/main/res/layout/chk_list_file_header.xml
+++ b/app/src/main/res/layout/chk_list_file_header.xml
@@ -1,21 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:elevation="@dimen/elevation_4"
     android:padding="@dimen/row_padding"
-    android:background="?attr/dividerColor">
+    android:background="?attr/dividerColor"
+    android:layout_margin="0dp">
 
-    <TextView
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:src="@drawable/ic_menu"
+        android:layout_gravity="center_vertical"
+        android:id="@+id/chklist_menu"
+        android:contentDescription="@string/chk_menu"
+        android:layout_centerVertical="true"/>
+
+
+    <TextView
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
         android:text="@string/create_new"
         android:id="@+id/chklist_new"
-        android:layout_gravity="right"
         android:clickable="true"
         android:textAllCaps="true"
-        android:textColor="?attr/backgroundDarkColor"
-        android:textStyle="bold"/>
+        android:textColor="?attr/highlightColor"
+        android:textStyle="bold"
+        android:layout_gravity="end"
+        android:layout_centerVertical="true"/>
 
-</LinearLayout>
+</RelativeLayout>
