--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -17,7 +17,7 @@
         <attr name="backgroundDarkColor" format="color"/>
         <attr name="backgroundColorHighlightLight" format="color"/>
         <attr name="backgroundColorHighlight" format="color"/>
-
+        <attr name="backgroundSnackbar" format="color"/>
 
         <attr name="greenColor" format="color"/>
     </declare-styleable>
