--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,6 +17,7 @@
         <item name="backgroundDarkColor">@color/colorLighter</item>
         <item name="backgroundColorHighlightLight">@color/colorBlueLight</item>
         <item name="backgroundColorHighlight">@color/colorBlue</item>
+        <item name="backgroundSnackbar">@color/colorGray</item>
         <item name="greenColor">@color/colorGreen</item>
     </style>
 
@@ -37,6 +38,7 @@
         <item name="backgroundDarkColor">@color/colorDark</item>
         <item name="backgroundColorHighlightLight">@color/colorPrimaryDark</item>
         <item name="backgroundColorHighlight">@color/colorPrimary</item>
+        <item name="backgroundSnackbar">@color/colorDark</item>
         <item name="greenColor">@color/colorGreenDark</item>
     </style>
 
