--- a/app/src/main/res/values-w820dp/dimens.xml
+++ b/app/src/main/res/values-w820dp/dimens.xml
@@ -18,4 +18,5 @@
     <dimen name="bottomSnackbarHeigth">48dp</dimen>
     <dimen name="padding_snack_side">24dp</dimen>
     <dimen name="padding_snack_topbottom">14dp</dimen>
+    <dimen name="big_text">32sp</dimen>
 </resources>
