--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,16 +1,81 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context="sk.lgstudio.easyflightbag.ui.FragmentHome"
-             android:background="?attr/backgroundColor">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="sk.lgstudio.easyflightbag.ui.FragmentHome"
+    android:background="?attr/backgroundColor"
+    android:id="@+id/home_screen"
+    android:orientation="vertical"
+    android:weightSum="1">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Home"
-        android:id="@+id/txt_h"
-        android:layout_gravity="center_horizontal"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.25"
+        android:id="@+id/home_panel_top"
+        android:orientation="vertical"
+        android:elevation="@dimen/elevation_8"
+        android:background="?attr/backgroundDarkColor"
+        >
 
-</FrameLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="ELEVATION GRAPH AND DATA"
+            android:gravity="center"/>
+
+        <ImageButton
+            android:id="@+id/home_panel_top_btn"
+            android:layout_width="@dimen/float_button_size"
+            android:layout_height="@dimen/float_button_size"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/ic_expand_up_inv"
+            android:background="@drawable/bck_transparent"/>
+
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.5"
+        android:orientation="vertical"
+        android:id="@+id/home_panel_map"
+        >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="MAP GOES HERE"
+            android:gravity="center"/>
+
+    </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.25"
+        android:id="@+id/home_panel_bottom"
+        android:orientation="vertical"
+        android:elevation="@dimen/elevation_8"
+        android:background="?attr/backgroundDarkColor">
+
+        <ImageButton
+            android:id="@+id/home_panel_bottom_btn"
+            android:layout_width="@dimen/float_button_size"
+            android:layout_height="@dimen/float_button_size"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:src="@drawable/ic_expand_down_inv"
+            android:background="@drawable/bck_transparent"/>
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="WARNIGS"
+            android:gravity="center"/>
+
+    </RelativeLayout>
+</LinearLayout>
