--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,4 +18,6 @@
     <dimen name="padding_snack_side">24dp</dimen>
     <dimen name="padding_snack_topbottom">14dp</dimen>
     <dimen name="big_text">32sp</dimen>
+
+    <dimen name="panel_closed">44dp</dimen>
 </resources>
