--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,11 +19,22 @@
         android:background="?attr/backgroundDarkColor"
         >
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/btn_start"
+            android:textAllCaps="true"
+            android:background="@drawable/bck_transparent"
+            android:id="@+id/home_button_start_stop"
+            android:layout_margin="@dimen/float_button_margin"
+            android:textColor="?attr/primaryTextColor"/>
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="ELEVATION GRAPH AND DATA"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:id="@+id/home_data_test"/>
 
         <ImageButton
             android:id="@+id/home_panel_top_btn"
