--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -47,21 +47,16 @@
 
     </RelativeLayout>
 
-    <LinearLayout
+
+
+    <com.google.android.gms.maps.MapView
+        android:id="@+id/home_map_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.5"
-        android:orientation="vertical"
-        android:id="@+id/home_panel_map"
-        >
+        />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="MAP GOES HERE"
-            android:gravity="center"/>
 
-    </LinearLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
