--- a/app/src/main/res/layout/chk_list_file_header.xml
+++ b/app/src/main/res/layout/chk_list_file_header.xml
@@ -13,7 +13,10 @@
         android:layout_gravity="center_vertical"
         android:id="@+id/chklist_menu"
         android:contentDescription="@string/chk_menu"
-        android:padding="@dimen/row_padding"/>
+        android:padding="@dimen/row_padding"
+        android:layout_centerVertical="true"
+        android:clickable="true"
+        />
 
 
     <ImageView
@@ -27,5 +30,17 @@
         android:layout_centerVertical="true"
         android:clickable="true"
         android:padding="@dimen/row_padding"/>
+
+    <TextView
+        android:id="@+id/chklist_airplane_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/row_padding"
+        android:textColor="?attr/highlightColor"
+        android:maxLines="1"
+        android:text="@string/app_name"
+        android:layout_centerVertical="true"
+        android:layout_toEndOf="@id/chklist_menu"
+        android:layout_toStartOf="@id/chklist_new"/>
 
 </RelativeLayout>
